      which allows to retrieve the list of CoreMIDI clients / ports and to connect
      to them a la JACK, via the usual sampler APIs
    - CoreMIDI: added driver specific port parameter "AUTO_BIND", if enabled
      the driver will automatically connect to other CoreMIDI clients' ports
      (e.g. external MIDI devices being attached to the Mac)

  * audio driver:
    - ASIO driver fixes for newer gcc versions (fix from PortAudio)

  * LSCP server:
    - added support for sending MIDI CC messages via LSCP command
      "SEND CHANNEL MIDI_DATA CC <sampler-chan> <ctrl> <val>"
    - added LSCP command "GET AVAILABLE_EFFECTS"
    - added LSCP command "LIST AVAILABLE_EFFECTS"
    - added LSCP command "GET EFFECT INFO <effect-index>"
    - added LSCP command "CREATE EFFECT_INSTANCE <effect-index>"
    - added LSCP command
      "CREATE EFFECT_INSTANCE <effect-system> <module> <effect-name>"
    - added LSCP command "DESTROY EFFECT_INSTANCE <effect-instance>"
    - added LSCP command "GET EFFECT_INSTANCES"
    - added LSCP command "LIST EFFECT_INSTANCES"
    - added LSCP command "GET EFFECT_INSTANCE INFO <effect-instance>"
    - added LSCP command
      "GET EFFECT_INSTANCE_INPUT_CONTROL INFO <effect-instance> <input-control>"
    - added LSCP command "SET EFFECT_INSTANCE_INPUT_CONTROL VALUE
      <effect-instance> <input-control> <value>"
    - added LSCP command "GET SEND_EFFECT_CHAINS <audio-device>"
    - added LSCP command "LIST SEND_EFFECT_CHAINS <audio-device>"
    - added LSCP command "ADD SEND_EFFECT_CHAIN <audio-device>"
    - added LSCP command
      "REMOVE SEND_EFFECT_CHAIN <audio-device> <effect-chain>"
    - added LSCP command
      "GET SEND_EFFECT_CHAIN INFO <audio-device> <effect-chain>"
    - added LSCP command "APPEND SEND_EFFECT_CHAIN EFFECT <audio-device>
      <effect-chain> <effect-instance>"
    - added LSCP command "INSERT SEND_EFFECT_CHAIN EFFECT <audio-device>
      <effect-chain> <effect-chain-pos> <effect-instance>"